--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="https://unpkg.com/x-data-spreadsheet/dist/xspreadsheet.css" />
     <title>
         埋点自动化检测
     </title>
@@ -12,16 +13,21 @@
 <body onload="load()">
     <link rel="stylesheet" href="./css/stylesheet.css">
     <div style="position: fixed; right: 0; top: .3em;">
-        <button type="button" onclick="importFile()">Import</button>
-        <button type="button" onclick="exportFile()">Export</button>
+        <input type="file" onchange="import_file(this.files)">Use readAsBinaryString: (when available)
+        <input type="checkbox" name="userabs" checked="">
+        <button class="button" style="vertical-align:middle" type="button" onclick="export_file()"><span>Export</span></button> !
     </div>
+    <script src="https://oss.sheetjs.com/sheetjs/shim.js"></script>
+    <script src="https://oss.sheetjs.com/sheetjs/xlsx.full.min.js"></script>
 
-    <link rel="stylesheet" href="https://unpkg.com/x-data-spreadsheet@1.1.9/dist/xspreadsheet.css">
-    <script src="https://unpkg.com/x-data-spreadsheet@1.1.9/dist/xspreadsheet.js"></script>
+    <script src="https://unpkg.com/x-data-spreadsheet/dist/xspreadsheet.js"></script>
+    <script src="https://unpkg.com/x-data-spreadsheet@1.1.9/dist/locale/zh-cn.js"></script>
 
     <!-- need to show index content -->
     <div id="x-spreadsheet-auto-checker"></div>
-    <script src="./js/loadData.js"></script>
+    <script src="./js/loadData.js">
+        x_spreadsheet.locale('zh-cn');
+    </script>
 </body>
 
 </html>
