--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://unpkg.com/x-data-spreadsheet/dist/xspreadsheet.css" />
     <title>
-        埋点自动化检测
+        TaggingLess AutoChecker
     </title>
 </head>
 
@@ -21,13 +21,13 @@
     <script src="https://oss.sheetjs.com/sheetjs/xlsx.full.min.js"></script>
 
     <script src="https://unpkg.com/x-data-spreadsheet/dist/xspreadsheet.js"></script>
-    <script src="https://unpkg.com/x-data-spreadsheet@1.1.9/dist/locale/zh-cn.js"></script>
+    <script src="https://unpkg.com/x-data-spreadsheet/dist/locale/zh-cn.js">
+        x_spreadsheet.locale('zh-cn');
+    </script>
 
     <!-- need to show index content -->
     <div id="x-spreadsheet-auto-checker"></div>
-    <script src="./js/loadData.js">
-        x_spreadsheet.locale('zh-cn');
-    </script>
+    <script src="./js/load.data.js"></script>
 </body>
 
 </html>
